--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -1,14 +1,14 @@
 <header class="uq-header">
     <div class="uq-header__container">
-            <div class="uq-header__logo">
-                <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-                <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
-            </div>
-            <div class="uq-header__search-toggle">
-                <button class="uq-header__search-toggle-button">Search</button>
-            </div>
-            <div class="uq-header__search">
-              <form>
+        <div class="uq-header__logo">
+            <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+            <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+        </div>
+        <div class="uq-header__search-toggle">
+            <button class="uq-header__search-toggle-button">Search</button>
+        </div>
+        <div class="uq-header__search">
+            <form>
                 <fieldset>
                     <legend class="uq-header__search-title">What are you looking for?</legend>
                     <div class="uq-header__search-range">
@@ -25,11 +25,12 @@
                         <span class="uq-header__search-query-button">
                             <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
                         </span>
-                  </div>
+                    </div>
                 </fieldset>
-              </form>
-            </div>
-            <ul class="uq-header__navigation">
+            </form>
+        </div>
+        <nav class="uq-header__navigation">
+            <ul class="uq-header__navigation-container">
                 <li><a class="uq-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
                 <li><a class="uq-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
                 <li><a class="uq-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
@@ -40,6 +41,6 @@
                 <li><a class="uq-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
                 <li><a class="uq-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
 </header>
