add styles, sizes, update blockquote size

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -119,6 +119,7 @@ $use-encapsulation: false !default;
     border-left: 6px solid core.$text;
     font-family: core.$font-accent;
     font-style: italic;
+    font-size: core.$font-size-l;
   }
   
   ol,
