fixed incorrect icon colour.

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -313,7 +313,7 @@
                         top: .5rem;
                         left: .5rem;
                         background-size: 100%;
-                        background-image: url(icon-constants.get-icon('standard--search', core.$uq-white));
+                        background-image: url(icon-constants.get-icon('standard--search', core.$uq-purple));
                     }
                 }
 
