add Interpolation wrapper to SCSS variable in Calc

--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -10,7 +10,7 @@ $image-path: '../images' !default;
 	margin-left: core.$space-l;
 	padding: core.$space core.$space-m;
 	position: relative;
-	width: calc(100% - core.$space-l);
+	width: calc(100% - #{core.$space-l});
 
 	&::before {
 		background-color: core.$uq-purple;
