adjust radio buttons

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -207,6 +207,7 @@
             @media #{core.$screen-lg-up} {
                 display: inline-block;
                 margin-left: core.$space;
+                line-height: 1.4;
             }
         }
 
