update kitchen sink

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -13,7 +13,7 @@
               <fieldset>
                   <legend class="uq-header__search-title">What are you looking for?</legend>
                   <div class="uq-header__search-range">
-                      <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio">
+                      <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio uq-header__search-radio">
                       <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
                   </div>
                   <div class="uq-header__search-range">
