--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -337,11 +337,12 @@
     <h5>Heading level 5 (h5)</h5>
     <h6>Heading level 6 (h6)</h6>
     <p class="uqds-font--lead">Lead paragraph text, lorem ipsum dolor sit amet.</p>
-    <p>Paragraph text, lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at.</p>
+    <p>Paragraph text, lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo.</p>
     <p class="uqds-font--small">Small paragraph text, lorem ipsum dolor sit amet.</p>
     <p class="uqds-font--xsmall">Extra small paragraph text, lorem ipsum dolor sit amet.</p>
     <p><strong>Strong text</strong></p> 
     <p><em>Emphasis text</em></p>
+    <p><label for="">Label text</label></p>
     <p><a href="">Link</a></p>
     <ol>
       <li>Ordered list item</li>
@@ -354,7 +355,7 @@
       <li>Unordered list item</li>
     </ul>
 
-    <blockquote>Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
+    <blockquote>Blockquote, Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
   </div>
 </div>
 <br/>
