--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -13,6 +13,7 @@
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'header/src/scss/component' as header;
+@use 'icon/src/scss/component' as icons;
 @use 'lists/src/scss/component' as lists;
 @use 'pane/src/scss/component' as pane;
 @use 'sections/src/scss/component' as sections;
@@ -20,3 +21,4 @@
 @use 'site-header/src/scss/component' as site-header;
 @use 'table/src/scss/component' as table;
 @use 'tabs/src/scss/component' as tabs;
+
