--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -13,6 +13,7 @@
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'header/src/scss/component' as header;
+@use 'hero/src/scss/component' as hero;
 @use 'icon/src/scss/component' as icons;
 @use 'lists/src/scss/component' as lists;
 @use 'pane/src/scss/component' as pane;
