--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -570,7 +570,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -591,7 +591,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -612,7 +612,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -633,7 +633,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super uq-card__title__super--grey">SUB-TITLE</p>
+                <p class="uq-card__title-super uq-card__title-super--grey">SUB-TITLE</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -660,7 +660,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -681,7 +681,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -702,7 +702,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
@@ -723,7 +723,7 @@
           <div class="uq-card__content__wrapper">
             <div class="uq-card__content">
               <div class="uq-card__header">
-                <p class="uq-card__title__super">DD MONTH</p>
+                <p class="uq-card__title-super">DD MONTH</p>
                 <h3 class="uq-card__title">Card title</h3>
               </div>
             </div>
