added previous-next component

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -17,6 +17,7 @@
 @use 'icon/src/scss/component' as icons;
 @use 'lists/src/scss/component' as lists;
 @use 'pane/src/scss/component' as pane;
+@use 'previous-next/src/scss/component' as previous-next;
 @use 'sections/src/scss/component' as sections;
 @use 'side-nav/src/scss/component' as side-nav;
 @use 'site-header/src/scss/component' as site-header;
