added progression component

--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -18,6 +18,7 @@
 @use 'lists/src/scss/component' as lists;
 @use 'pane/src/scss/component' as pane;
 @use 'previous-next/src/scss/component' as previous-next;
+@use 'progression/src/scss/component' as progression;
 @use 'sections/src/scss/component' as sections;
 @use 'side-nav/src/scss/component' as side-nav;
 @use 'site-header/src/scss/component' as site-header;
