--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -16,6 +16,8 @@
 @use 'hero/src/scss/component' as hero;
 @use 'icon/src/scss/component' as icons;
 @use 'lists/src/scss/component' as lists;
+@use 'loading-spinner/src/scss/component' as loading-spinner;
+@use 'pagination/src/scss/component' as pagination;
 @use 'pane/src/scss/component' as pane;
 @use 'previous-next/src/scss/component' as previous-next;
 @use 'progression/src/scss/component' as progression;
