--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -15,7 +15,7 @@
     &__container {
         @include grid.layout-containment;
         position: relative;  
-        padding: core.$space core.$space 0; 
+        padding: core.$space core.$space-s 0; 
         display: grid;
         grid-template-columns: auto auto;
         grid-template-areas:
