--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -243,7 +243,7 @@
             border-radius: 2px;
             background-color: core.$uq-white;
             background-position: 1rem;
-            margin-bottom: core.$space;
+            margin-bottom: core.$space-s;
 
             @media #{core.$screen-xl-up} {
                 margin-bottom: core.$space-m;
