update padding in header radios

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -223,7 +223,8 @@
 
         input[type="radio"] + label {
             font-size: core.$font-size-s;
-            margin: core.$space-none;
+            margin-bottom: core.$space-none;
+            padding-top: core.$space-xs;
         }
 
         input[type="radio"]:checked {
