adjust label padding

--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -131,7 +131,7 @@ $use-encapsulation: false !default;
         margin-left: core.$space-s;
         margin-right: $form-spacing;
         padding-top: core.$space-xs;
-        padding-left: core.$space-compressed-xxxl;
+        padding-left: core.$space-m;
         vertical-align: top;
       }
 
@@ -279,7 +279,7 @@ $use-encapsulation: false !default;
       margin-left: core.$space-s;
       margin-right: $form-spacing;
       padding-top: core.$space-compressed-xs;
-      padding-left: core.$space-compressed-xxxl;
+      padding-left: core.$space-m;
       vertical-align: top;
     }
 
