--- a/packages/accordion/src/scss/_global.scss
+++ b/packages/accordion/src/scss/_global.scss
@@ -2,6 +2,6 @@
 
 // Variables, functions, and mixins
 $accordion-border-color: core.$uq-neutral-light40; 
-$accordion-title-bg-hover: core.$uq-darkgrey-light80; 
+$accordion-title-bg-hover: core.$uq-neutral-light80; 
 $accordion-content-bg: core.$uq-white;
 $accordion-editor-outline: core.$uq-red-dark10; 
