--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -75,7 +75,8 @@
       color: core.$text;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
       background-color: $accordion-title-bg-hover;
     }
 
